--- a/projectAlpha/src/main/resources/application.properties
+++ b/projectAlpha/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port = 8081
+server.error.whitelabel.enabled=false
+
+#SSL key-store properties
+#security.require-ssl=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:projectAlpha.p12
+#server.ssl.key-store-password=projectAlpha
